--- a/test.html
+++ b/test.html
@@ -1,3 +1,15 @@
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="utf-8"/>
+<link href="css/some-stylesheet.css"
+      rel="stylesheet"/>
+<script src="scripts/some-script.js">
+</script>
+</head>
+<body>
+
 <table id="codexpl">
 <tr>
     <th>#</th>
@@ -6390,3 +6402,5 @@
         <td>Coloumn</td>
     </tr>
 </table>
+</body>
+</html>
